[tool.poetry]
name = "python-back"
version = "0.1.0"
description = ""
authors = ["Caio.LimaContractor <caio.limacontractor@modec.com>"]
readme = "README.md"
packages = [{include = "python_back"}]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
astroid = "^2.15.5"
attrs = "^23.1.0"
black = "^23.3.0"
cfgv = "^3.3.1"
click = "^8.1.3"
distlib = "^0.3.6"
faker = "^18.9.0"
filelock = "^3.12.0"
flake8 = "^6.0.0"
flask = "^2.3.2"
flask-cors = "^3.0.10"
identify = "^2.5.24"
iniconfig = "^2.0.0"
isort = "^5.12.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
lazy-object-proxy = "^1.9.0"
markupsafe = "^2.1.2"
mccabe = "^0.7.0"
mypy-extensions = "^1.0.0"
nodeenv = "^1.8.0"
packaging = "^23.1"
pathspec = "^0.11.1"
pluggy = "^1.0.0"
pre-commit = "^3.3.2"
py = "^1.11.0"
pycodestyle = "^2.10.0"
pyflakes = "^3.0.1"
pylint = "^2.17.4"
pyparsing = "^3.0.9"
pytest = "^7.3.1"
python-dateutil = "^2.8.2"
pyyaml = "^6.0"
regex = "^2023.5.5"
six = "^1.16.0"
sqlalchemy = "^2.0.15"
text-unidecode = "^1.3"
toml = "^0.10.2"
typed-ast = "^1.5.4"
typing-extensions = "^4.6.1"
virtualenv = "^20.23.0"
werkzeug = "^2.3.4"
wrapt = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
